    - Added another intermediate to vacuum tubes, a vacuum tube getter - which takes caesium, rubidium, tungsten and zirconina.
    - Added a way to make bismite with flux, because i got rid of the original recipe which took flux.

  Changes:
    - Changed CRT's recipe to take CRT framing and screens.
    - Moved around the items needed in CRT/Oscilliscopes/RCU's.
    - Made Oscilliscopes slightly cheaper. Slightly.
    - Changed polonium reactors to give off pollution.
    - Changed molten-inators to start from 10 pollution/m, and gets to 6p/m at tier 3.
    - Changed calcite filtering to take 4 seconds instead of 1.3.
    - Also changed calcite filtering to occsionally give off sea salt.
    - Changed modules to take 4 rubber instead of 2.
    - Nerfed stone walls resistances to 2% acid, 10% and 65% fire.
    - Changed electric mining drills 2 to be just upgraded tier 1's, without the increased mining area.
    - Deleted zirconium ore. It literally did nothing, and zirconium is already convulted as is with its uses.
    - Made crucibles need 3 zironica, compared to 2.
    - Made crucibles need 4 aluminium plates, compared to 2.
    - Changed the amount of acidic water you get from leeching ferrum/patina from 15 to 12.5, and made it a probability-based amount.
    - Changed the amount of polonium you can get from lead-solder, from 0-2, to 0-2 with a 25% chance. I still want to see people attempt to power their base with it.
    - Changed any plates that come after P-TM science, to take 6.4s instead of the usual 3.2s.
    - Changed palladium catalysts to use plates, not ore.
    - Lowered the cost of worker robots speed 5 technology from 500 to 450.
    - Changed the amount of electric engines needed for assembler 3's from 5 to 3.
    - Changed yellow inserters to take gears, changed blue inserters to take yellow inserters.
    - Added productivity to lithium hydroxide and oversaturated lithium leeching.